--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
           <div class="collapsenavbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="../page/Inicio.html">INICIO</a>
+                <a class="nav-link" href="#">INICIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../page/Menu.html">MENU</a>
+                <a class="nav-link" href="./page/Menu.html">MENU</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../page/Galeria.html">GALERIA</a>
+                <a class="nav-link" href="./page/Galeria.html">GALERIA</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../page/Contacto.html">CONTACTO</a>
+                <a class="nav-link" href="./page/Contacto.html">CONTACTO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../page/Sucursales.html">SUCURSALES</a>
+                <a class="nav-link" href="./page/Sucursales.html">SUCURSALES</a>
               </li>
             </ul>
           </div>
