--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../img/foto 1.jpeg" class="d-block w-100" alt="muffins">
+                  <img src="./img/foto 1.jpeg" class="d-block w-100" alt="muffins">
                 </div>
                 <div class="carousel-item">
-                  <img src="../img/foto 2.jpeg" class="d-block w-100" alt="taza de café">
+                  <img src="./img/foto 2.jpeg" class="d-block w-100" alt="taza de café">
                 </div>
                 <div class="carousel-item">
-                  <img src="../img/foto 3.jpeg" class="d-block w-100" alt="croissant">
+                  <img src="./img/foto 3.jpeg" class="d-block w-100" alt="croissant">
                 </div>
                 <div class="carousel-item">
-                  <img src="../img/foto 4.jpeg" class="d-block w-100" alt="tazas de café">
+                  <img src="./img/foto 4.jpeg" class="d-block w-100" alt="tazas de café">
                 </div>
                 <div class="carousel-item">
-                  <img src="../img/foto 5.jpeg" class="d-block w-100" alt="taza de chocolate">
+                  <img src="./img/foto 5.jpeg" class="d-block w-100" alt="taza de chocolate">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -100,7 +100,7 @@
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">Por supuesto, utilizamos tarjeta como método de pago
-                    <img src="../img/logo banco.jpeg" class="banco" alt="iniciales de banco">
+                    <img src="./img/logo banco.jpeg" class="banco" alt="iniciales de banco">
                 </div>
               </div>
             </div>
@@ -112,7 +112,7 @@
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">Por supuesto, utilizamos Mercado Pago como método de pago
-                    <img src="../img/mercado pago.jpeg" class="mercado" alt="iniciales de mercado pago">
+                    <img src="./img/mercado pago.jpeg" class="mercado" alt="iniciales de mercado pago">
                 </div>
               </div>
             </div>
@@ -124,7 +124,7 @@
               </h2>
               <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">Por supuesto, aceptamos efectivo como método de pago 
-                    <img src="../img/logo dolar.jpeg" class="efectivo" alt="billete">
+                    <img src="./img/logo dolar.jpeg" class="efectivo" alt="billete">
                 </div>
               </div>
             </div>
