--- a/index.html
+++ b/index.html
@@ -5,142 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <title>LE COIN</title>
+    <title>ROSE DES NEIGES</title>
     <meta name="description" content="Restaurante con productos de elaboración propia, bien caseros.">
 </head>
-<body>
-  <div class="contenedorgeneral">
+<body class="bodyinicio">
     <header>
-      <h1 class="p-4estilopropio">LE COIN</h1>
-      <h2>coffee bar</h2>
-      <nav class="navbar navbar-expand-lg colorpropio">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" src="../img/Descargar logotipo de la taza de café diseño de icono de vector de cafetería gratis.jpeg" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapsenavbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="#">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./page/Menu.html">MENU</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./page/Galeria.html">GALERIA</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./page/Contacto.html">CONTACTO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./page/Sucursales.html">SUCURSALES</a>
-              </li>
-            </ul>
+        <h1 class="p-4 stylepropio">ROSE DES NEIGES</h1>
+        <nav class="navbar navbar-expand-lg colonav">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img class="logocoffee" src="./img/logocoffee.jpg" alt="logo"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./page/Menú.html">MENÚ</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./page/Galería.html">GALERÍA</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./page/Contacto.html">CONTACTO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./page/Sucursales.html">SUCURSALES</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+    <main>
+      <section class="restaurante">
+        <img src="./img/restaurante.jpg" alt="restaurante">
+    </section>
+    <p class="párrafo1">
+      Rose des Neiges, su primer local, nace en Paris, en el año 2013 ofreciendo una variada carta con opciones dulces y saladas. Se destacó su propuesta original de pancackes, crepes, waffles y pastelería artesanal, sumando platos principales, ensaladas, sandwichs gourmet, entradas y picoteo. Ideas que en su base, fueron consecuencia de viajes por EEUU, Francia y Argentina, extrayendo lo mejor de cada lugar para crear un mix único y bien definido.
+    </p>
+    <div id="carouselExampleIndicators" class="carousel slide w-50 mx-auto">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./img/carrousel 1.jpg" class="d-block w-100" alt="mesas">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/carrousel 2.jpg" class="d-block w-100" alt="sección de pastelería">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/carrousel 3.jpg" class="d-block w-100" alt="sección para comer">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/carrousel 4.jpg" class="d-block w-100" alt="sección de decoración">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/carrousel 5.jpg" class="d-block w-100" alt="árbol">
           </div>
         </div>
-      </nav>
-      </header>
-      <main>
-        <section class="section1">
-          <p class="p-2lead">
-            La Esquina, su primer local, nace en Paris, en el año 2013 ofreciendo una variada carta con opciones dulces y saladas. Se destacó su propuesta original de pancackes, crepes, waffles y pastelería artesanal, sumando platos principales, ensaladas, sandwichs gourmet, entradas y picoteo. Ideas que en su base, fueron consecuencia de viajes por EEUU, Francia y Argentina, extrayendo lo mejor de cada lugar para crear un mix único y bien definido.</p>
-          </section>
-          <section class="section2">
-            <img src="./img/Up in the Stars.jpeg" alt="Cafeteria">
-          </section>
-          <section class="section3">
-            <p class="p-3">
-              El creador de la marca buscaba en este nuevo concepto gastronómico un refugio culinario donde la experiencia recuerde a los sabores de la infancia, a la cocina de las madres y las abuelas, como el sabor y el olor del pan recién hecho. En su cabeza este recuerdo estaba asociado a las meriendas viendo los famosos dibujos animados. Los locales se caracterizan por su calidez y confort, con el color blanco como predominante y con cómodo mobiliario de maderas naturales y confección artesanal. Una mezcla de estilos perfectamente combinados que conforman un ambiente original, descontracturado y delicado; que invita a los comensales a disfrutar a pleno de un momento agradable en todos los sentidos.</p>
-            </section>
-            <div class="row">
-              <div id="carouselExampleIndicators" class="carousel slide w-25 mx-auto">
-                <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-              </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="./img/foto 1.jpeg" class="d-block w-100" alt="muffins">
-                </div>
-                <div class="carousel-item">
-                  <img src="./img/foto 2.jpeg" class="d-block w-100" alt="taza de café">
-                </div>
-                <div class="carousel-item">
-                  <img src="./img/foto 3.jpeg" class="d-block w-100" alt="croissant">
-                </div>
-                <div class="carousel-item">
-                  <img src="./img/foto 4.jpeg" class="d-block w-100" alt="tazas de café">
-                </div>
-                <div class="carousel-item">
-                  <img src="./img/foto 5.jpeg" class="d-block w-100" alt="taza de chocolate">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <section class="acordeon">
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  ¿Se puede pagar con tarjeta?
-                </button>
-              </h2>
-              <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Por supuesto, utilizamos tarjeta como método de pago
-                    <img src="./img/logo banco.jpeg" class="banco" alt="iniciales de banco">
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                  ¿Se puede pagar con Mercado Pago?
-                </button>
-              </h2>
-              <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Por supuesto, utilizamos Mercado Pago como método de pago
-                    <img src="./img/mercado pago.jpeg" class="mercado" alt="iniciales de mercado pago">
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                  ¿Se puede pagar en efectivo?
-                </button>
-              </h2>
-              <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Por supuesto, aceptamos efectivo como método de pago 
-                    <img src="./img/logo dolar.jpeg" class="efectivo" alt="billete">
-                </div>
-              </div>
-            </div>
+      <p class="párrafo2">
+        El creador de la marca buscaba en este nuevo concepto gastronómico un refugio culinario donde la experiencia recuerde a los sabores de la infancia, a la cocina de las madres y las abuelas, como el sabor y el olor del pan recién hecho. En su cabeza este recuerdo estaba asociado a las meriendas viendo los famosos dibujos animados. Los locales se caracterizan por su calidez y confort, con el color blanco como predominante y con cómodo mobiliario de maderas naturales y confección artesanal. Una mezcla de estilos perfectamente combinados que conforman un ambiente original, descontracturado y delicado; que invita a los comensales a disfrutar a pleno de un momento agradable en todos los sentidos.</p>
+        <section>
+        <div class="vídeo">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/8IYLqPQ_1ik?si=LyunEZqVRSUEUQBX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      </section>
+        </main>
+        <footer class="footer">
+          <div>
+            <a href="https://www.facebook.com/"> <img class="social" src="./img/logo de facebook.jpg" alt="logo de facebook"></a>
+            <a href="https://www.instagram.com/"> <img class="social" src="./img/logo instagram.jpg" alt="logo de instagram"></a>
+            <a href="https://ar.linkedin.com/"> <img class="social" src="./img/logo linkedin.jpg" alt="logo de linkedin"></a>
           </div>
-    </section>
-    </main>
-    <footer class="footerclass">
-      <h4 class="seguirclass">SEGUINOS</h4>
-      <div class="socialink">
-        <a href="https://www.facebook.com/"> <i class="fab fa-facebook-f"></i> </a>
-        <a href="https://www.instagram.com/"> <i class="fab fa-instagram"></i> </a>
-        <a href="https://ar.linkedin.com/"> <i class="fab fa-linkedin"></i> </a>
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-</html> 
-
+</html>
