--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@
             <a href="https://ar.linkedin.com/"> <img class="social" src="./img/logo linkedin.jpg" alt="logo de linkedin"></a>
           </div>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="./js/index.js"></script>
 </body>
 </html>
