--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="./page/Sucursales.html">SUCURSALES</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./page/Tienda.html">TIENDA</a>
+                  </li>
                 </ul>
               </div>
             </div>
