--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
             <a href="https://ar.linkedin.com/"> <img class="social" src="./img/logo linkedin.jpg" alt="logo de linkedin"></a>
           </div>
         </footer>
-        <script src="./js/index.js"></script>
+        <!-- <script src="./js/index.js"></script> -->
 </body>
 </html>
